Page to export and import annotations to file to avoid losing them, update README and screenshot

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -106,6 +106,7 @@
             ]
         }
     ],
+    "options_page": "annotation/settings.html",
     "author": {
         "email": "mcomajoancara@gmail.com"
     }
