Added function to export the annotated PDF.

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -99,7 +99,8 @@
         {
             "resources": [
                 "reader.html",
-                "pdf_loader_iframe.html"
+                "pdf_loader_iframe.html",
+                "libs/pdf-lib.min.js"
             ],
             "matches": [
                 "<all_urls>"
